development-runs/298/k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sme-app
  labels:
    name: sme-app
