development-runs/298/k8s/prod/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sme-app
  labels:
    app: frontend
    io.kompose.service: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      io.kompose.service: frontend
  template:
    metadata:
      labels:
        app: frontend
        io.kompose.service: frontend
    spec:
      containers:
        - name: frontend
          image: ralfx22/sme-frontend:latest
          ports:
            - containerPort: 80
              protocol: TCP
