development-runs/298/k8s/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sme-app
  labels:
    app: frontend
    io.kompose.service: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
    io.kompose.service: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
